<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="21sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_before"/>
        <EditText
            android:id="@+id/filterDialogDateBefore"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_after"/>
        <EditText
            android:id="@+id/filterDialogDateAfter"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service"
        android:textSize="21sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"/>
    <Spinner
        android:id="@+id/filterDialogServiceSpinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"/>
</LinearLayout>