<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <EditText
            android:id="@+id/LoginActivityEDEmail"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_margin="5dp"
            android:textSize="21sp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/LoginActivityEDPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="5dp"
            android:textSize="21sp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/LoginActivityBLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="@style/DefaultButtonStyle"
            android:layout_margin="5dp"
            android:textSize="21sp"
            android:onClick="BLoginClick"/>
        <Button
            android:id="@+id/LoginActivityBRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/DefaultButtonStyle"
            android:layout_margin="5dp"
            android:textSize="21sp"
            android:onClick="BRegistrationClick"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/LoginActivityRLoad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>