<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.OrderDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:textColor="@color/pure_gray"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/OrderDetailsFragmentTVDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Адрес:"
                    android:textSize="20sp"
                    android:textColor="@color/pure_gray"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/OrderDetailsFragmentTVAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/OrderDetailsFragmentLLUserRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/OrderDetailsFragmentTVUserRole"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client"
                    android:textSize="20sp"
                    android:textColor="@color/pure_gray"
                    android:layout_gravity="top"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/OrderDetailsFragmentTVClientName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="20sp"/>
                    <TextView
                        android:id="@+id/OrderDetailsFragmentTVClientEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textSize="18sp"
                        android:textColor="@color/pure_gray"/>
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:id="@+id/OrderDetailsFragmentLLImageViewContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Фотографии:"
                android:textSize="20sp"
                android:textColor="@color/pure_gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/linear_layout_transparent_style">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/OrderDetailsFragmentLLImageContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/image_container_background"
                        android:padding="8dp"
                        android:minHeight="50sp">
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Описание:"
                android:textSize="20sp"
                android:textColor="@color/pure_gray"/>
            <TextView
                android:id="@+id/OrderDetailsFragmentTVDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Услуги:"
                android:textSize="20sp"
                android:textColor="@color/pure_gray"/>
            <ListView
                android:id="@+id/OrderDetailsFragmentLVServices"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="65dp"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/OrderDetailsFragmentBRespond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/respond"
        style="@style/DefaultButtonStyle"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>