<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OrderReportFragment"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <EditText
                android:id="@+id/OrderReportFragmentEDComment"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/comment"
                android:textSize="21sp"
                android:layout_margin="10dp"
                android:inputType="textMultiLine"/>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@drawable/linear_layout_transparent_style">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/OrderReportFragmentLLImageContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/image_container_background"
                        android:padding="8dp"
                        android:minHeight="50sp">

                        <LinearLayout
                            android:id="@+id/OrderReportFragmentLLAddPhoto"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:padding="8dp"
                            android:background="@drawable/image_container_background">

                            <ImageView
                                android:layout_width="60dp"
                                android:layout_height="60dp"
                                android:src="@drawable/add_circle"
                                android:background="@null"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add_photo"
                                android:textSize="12sp"
                                android:gravity="center"/>
                        </LinearLayout>
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>

            <Button
                android:id="@+id/OrderReportFragmentBSubmit"
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:text="@string/done"
                style="@style/DefaultButtonStyle"
                android:textSize="21sp"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>